# Thor-Firewall-Smart

./: .env.example  .gitignore  ADVANCED_WAF_NETWORK_FIREWALL_TECH_AR.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATE_EVALUATION_AR.md  Cargo.toml  Cargo.toml.bak  Dockerfile  EXECUTION_START_AR.md  HARDENING_COMPLETE.md  IMPLEMENTATION_STATUS_AR.md  LICENSE  LIVE_TEST_RESULTS_TEMPLATE.md  Makefile  NEXT_PHASE_ROADMAP_AR.md  ODIN_ARCHITECTURE.md  PHASE1_COMPLETION_AR.md  QUICKSTART.md  README.md  SECURITY.md  THOR_COMPREHENSIVE_PLATFORM_ROADMAP_AR.md  THOR_MASTER_PLAN_AR.md  WEB_AGENT_EXECUTION_PLAN_AR.md  WEB_AGENT_TECH_STACK_AR.md  chaos_runner.py  deny.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  ml_train_export.py  replit.md  rust-toolchain.toml  thor.yaml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
crates/thor-agent/: Cargo.toml
crates/thor-agent-net/: Cargo.toml  Dockerfile
crates/thor-agent-net/src/: main.rs
crates/thor-agent-srv/: Cargo.toml  Dockerfile
crates/thor-agent-srv/src/: main.rs
crates/thor-agent-web/: Cargo.toml  Dockerfile
crates/thor-agent-web/src/: main.rs
crates/thor-agent/benches/: detection_benchmarks.rs  detection_engines.rs  sigma_engine.rs
crates/thor-agent/src/: config.rs  control_plane_client.rs  lib.rs  main.rs
crates/thor-agent/src/api/: auth_middleware.rs  forensics_api.rs  handlers.rs  mod.rs  rate_limit.rs  validation.rs  ws.rs  zero_day_api.rs
crates/thor-agent/src/audit/: mod.rs
crates/thor-agent/src/bpf/: dns_ipv6.c
crates/thor-agent/src/cluster/: mod.rs
crates/thor-agent/src/control/: client.rs
crates/thor-agent/src/db/: alerts.rs  audit.rs  campaigns.rs  entity_profiles.rs  feedback.rs  ioc_store.rs  metrics_store.rs  mod.rs  token_blacklist.rs
crates/thor-agent/src/detection/: c2_detector.rs  ioc_check.rs  lolbins.rs  mod.rs  sequence_detector.rs  sigma.rs  sigma_compiler.rs  yara.rs  yara_tests.rs
crates/thor-agent/src/detection/zero_day/: anomaly_engine.rs  behavioral_baseline.rs  exploit_primitives.rs  kernel_exploit.rs  mod.rs  network_covert.rs  process_hollowing.rs  syscall_profiler.rs
crates/thor-agent/src/dissectors/: dns.rs  http.rs  mod.rs  smb.rs  tls_dissector.rs
crates/thor-agent/src/ebpf/: afxdp_loader.rs  loader.rs  mod.rs
crates/thor-agent/src/events/: dedup.rs  enrichment.rs  mod.rs  pipeline.rs  siem_exporter.rs
crates/thor-agent/src/fim/: baseline.rs  hasher.rs  mod.rs  watcher.rs
crates/thor-agent/src/fingerprint/: ja4.rs  ja4h.rs  ja4s.rs  ja4ssh.rs  mod.rs
crates/thor-agent/src/forensics/: artifacts.rs  collector.rs  memory_scanner.rs  mod.rs
crates/thor-agent/src/forensics/thorql/: executor.rs  mod.rs  parser.rs
crates/thor-agent/src/geo/: mod.rs
crates/thor-agent/src/graph/: mod.rs
crates/thor-agent/src/ids/: file_extractor.rs  file_reassembler.rs  flow.rs  matcher.rs  mod.rs  rule_parser.rs  threshold.rs
crates/thor-agent/src/intel/: abuse_ch.rs  emerging_threats.rs  feeds.rs  mod.rs  otx.rs  stix.rs
crates/thor-agent/src/kafka/: mod.rs
crates/thor-agent/src/ldap/: mod.rs
crates/thor-agent/src/metrics/: mod.rs
crates/thor-agent/src/mitre/: mod.rs
crates/thor-agent/src/ml/: campaign_correlator.rs  continuous_learning.rs  differential_privacy.rs  features.rs  feedback.rs  flow_transformer.rs  gnn_detector.rs  ja4_analyzer.rs  kill_chain.rs  l7_analyzer.rs  llm_orchestrator.rs  llm_reporter.rs  malware_classifier.rs  mod.rs  onnx_scorer.rs  timeseries_anomaly.rs  ueba.rs
crates/thor-agent/src/mtls/: mod.rs
crates/thor-agent/src/network/: mod.rs  reassembler.rs
crates/thor-agent/src/notify/: mod.rs
crates/thor-agent/src/rootkit/: checker.rs  hidden_process.rs  kernel_module.rs  mod.rs  network_compare.rs  syscall_hook.rs
crates/thor-agent/src/sandbox/: mod.rs
crates/thor-agent/src/security/: anti_tamper.rs  compliance.rs  container_escape.rs  mod.rs  sca.rs
crates/thor-agent/src/siem/: mod.rs
crates/thor-agent/src/soar/: forensics.rs  isolation.rs  mod.rs  quarantine.rs
crates/thor-agent/src/state/: attack_graph.rs  flow.rs  ioc.rs  mod.rs  persistence.rs
crates/thor-agent/src/system/: monitor.rs
crates/thor-agent/src/threat_intel/: mod.rs
crates/thor-agent/src/tls/: mod.rs
crates/thor-agent/src/ueba/: mod.rs
crates/thor-agent/tests/: forensics_tests.rs  integration_phase1.rs  odin_unit_tests.rs  phase1_agent_integration.rs  security_tests.rs  sequence_detector_tests.rs  zero_day_tests.rs
crates/thor-bpf/: Cargo.toml  build.rs
crates/thor-bpf/include/: common.h
crates/thor-bpf/src/: af_xdp_redirect.bpf.c  container_escape_rt.bpf.c  dns_monitor.bpf.c  fim_monitor.bpf.c  fim_monitor.rs  heap_spray_detector.bpf.c  l7_inspector.bpf.c  lib.rs  lsm_enforcer.bpf.c  network_correlator.bpf.c  network_correlator.rs  process_monitor.bpf.c  process_monitor.rs  rop_detector.bpf.c  slow_ddos_detector.bpf.c  syscall_profiler.bpf.c  tc_egress.bpf.c  tls_inspector.bpf.c  xdp_drop.bpf.c  xdp_drop.rs
crates/thor-common/: Cargo.toml
crates/thor-common/src/: crypto.rs  event_channel.rs  lib.rs
crates/thor-ids/: Cargo.toml
crates/thor-ids/benches/: detection_engine.rs
crates/thor-ids/src/: lib.rs
crates/thor-ids/src/dpi/: anomaly_detector.rs  covert_channel_detector.rs  mod.rs  packet_encoder.rs  protocol_classifier.rs
crates/thor-ids/tests/: dpi_tests.rs
crates/thor-script/: Cargo.toml
crates/thor-script/src/: lib.rs  parser.rs  runtime.rs
crates/thor-xdp/: Cargo.toml
crates/thor-xdp/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_l7_payload.rs  parse_ssl_payload.rs
thor-control-plane/crates/thor-control-server/: Cargo.toml
thor-control-plane/crates/thor-control-server/migrations/: 20240101000000_init.sql
thor-control-plane/crates/thor-control-server/src/: break_glass.rs  canary_rollout.rs  delegation.rs  fl_aggregator.rs  grpc.rs  main.rs  telemetry.rs
thor-control-plane/crates/thor-control-server/src/agent_manager/: mod.rs
thor-control-plane/crates/thor-control-server/src/api/: middleware.rs
windows/wfp/: Cargo.toml
windows/wfp/src/: lib.rs
(+3134 files in other folders)
