[workspace]
resolver = "2"
members = [
    "crates/thor-common",
    "crates/thor-bpf",
    "crates/thor-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Thor Security Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# Networking
axum = { version = "0.7", features = ["ws", "macros", "http2"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Memory & Concurrency
dashmap = "6.0"
flume = "0.11"
crossbeam = "0.8"
parking_lot = "0.12"

# eBPF
aya = { version = "0.12", features = ["async_tokio"] }

# ML / Inference
ort = { version = "2.0.0-rc.4", features = ["load-dynamic"] }
ndarray = { version = "0.15", features = ["rayon"] }

# Networking utilities
ipnetwork = "0.20"
bytes = "1.6"

# Detection
ahocorasick = { package = "aho-corasick", version = "1.1" }
yara = "0.6"
bloomfilter = "1.0"
walkdir = "2.5"

# API
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
futures = "0.3"

# Process info
nix = { version = "0.28", features = ["fs", "process", "sched"] }
sha2 = "0.10"
rayon = "1.10"
num_cpus = "1.16"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
