[workspace]
resolver = "2"
members = [
    # ── Core shared library (types, crypto, events) ───────────────
    "crates/thor-common",

    # ── eBPF kernel programs (compiled separately for bpfel-unknown-none) ─
    "crates/thor-bpf",
    "crates/thor-xdp-ebpf",

    # ── Monolithic agent (legacy + detection engines) ─────────────
    "crates/thor-agent",

    # ── Specialised micro-agents (new modular architecture) ────────
    "crates/thor-agent-net",   # L3/L4 XDP Network Agent
    "crates/thor-agent-web",   # L7 WAF Web Agent
    "crates/thor-agent-srv",   # EDR Server Agent

    # ── Control & Intelligence ─────────────────────────────────────
    "crates/thor-soc-slm",     # SOC Small Language Model engine
    "crates/thor-xdp",         # XDP userspace loader helper

    # ── Supporting libraries ───────────────────────────────────────
    "crates/thor-script",      # Scripting engine (playbooks)
    "crates/thor-ids",         # IDS/DPI engine
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Thor Security Team"]

[workspace.dependencies]
# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1.37", features = ["full"] }

# ── Error handling ────────────────────────────────────────────────────────────
anyhow    = "1.0"
thiserror = "1.0"

# ── Logging / Tracing ─────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender   = "0.2"

# ── Serialization ─────────────────────────────────────────────────────────────
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml  = "0.0.12"    # replaces archived serde_yaml 0.9 — same API
chrono     = { version = "0.4", features = ["serde"] }

# ── Networking ────────────────────────────────────────────────────────────────
axum       = { version = "0.7", features = ["ws", "macros", "http2"] }
# tower features: see Phase 3 block below
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# ── Memory & Concurrency ──────────────────────────────────────────────────────
dashmap    = "6.0"
flume      = "0.11"
crossbeam  = "0.8"
parking_lot = "0.12"

# ── eBPF ──────────────────────────────────────────────────────────────────────
aya = { version = "0.12", features = ["async_tokio"] }

# ── ML / Inference ────────────────────────────────────────────────────────────
# ort RC → stable: pin to 1.x for production stability
# To use ONNX RT: set THOR_ORT_LIB_PATH=/usr/lib/libonnxruntime.so.1.18.0
ort = { version = "1.16", features = ["load-dynamic"] }
ndarray = { version = "0.15", features = ["rayon"] }

# ── Networking utilities ──────────────────────────────────────────────────────
ipnetwork = "0.20"
bytes     = "1.6"

# ── Detection ─────────────────────────────────────────────────────────────────
ahocorasick  = { package = "aho-corasick", version = "1.1" }
yara         = "0.6"
bloomfilter  = "1.0"
walkdir      = "2.5"

# ── API documentation ─────────────────────────────────────────────────────────
utoipa             = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui  = { version = "6", features = ["axum"] }

# ── System ────────────────────────────────────────────────────────────────────
futures = "0.3"
nix     = { version = "0.28", features = ["process", "signal", "fs"] }
sha2    = "0.10"
rayon   = "1.10"
libc    = "0.2"

# ── Phase 1: New additions ─────────────────────────────────────────────────────
blake3   = "1.5"
hostname = "0.4"
uuid     = { version = "1.8", features = ["v4"] }
regex    = "1.10"
mimalloc = { version = "0.1", default-features = false }

# ── mTLS / Zero-Trust (Phase 0 — CISO Requirement) ─────────────────────────
rcgen        = { version = "0.13", features = ["pem"] }
rustls       = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
webpki-roots = "0.26"

# ── Continuous learning
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile  = "3"

# ── Phase 2: Axis 2 additions ──────────────────────────────────────────────────
once_cell = "1.19"
hex       = "0.4"

# ── Phase 3: Production Readiness (v0.3.0) ────────────────────────────────────
# Password hashing — Argon2id (OWASP recommended, constant-time)
argon2     = "0.5"
# Active fork of serde_yaml (see migration note above — serde_yml replaces serde_yaml)
# redb: replaces archived sled 0.34 — 3x faster, actively maintained
redb       = "2.1"
# Criterion for benchmarks (dev-only)
criterion  = { version = "0.5", features = ["html_reports"] }
# reqwest for TheHive integration
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Tower rate limiter
tower      = { version = "0.4", features = ["limit", "timeout"] }

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
