[package]
name = "thor-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.thor-agent]
path = "../crates/thor-agent"

[[bin]]
name = "parse_l7_payload"
path = "fuzz_targets/parse_l7_payload.rs"
test = false
doc = false

[[bin]]
name = "parse_ssl_payload"
path = "fuzz_targets/parse_ssl_payload.rs"
test = false
doc = false
