[package]
name = "thor-agent-net"
version = "0.1.0"
edition = "2021"

[dependencies]
thor-common = { path = "../thor-common" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
aya = "0.12"

