[package]
name = "thor-agent-srv"
version = "0.1.0"
edition = "2021"

[dependencies]
thor-common = { path = "../thor-common" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sysinfo = { version = "0.30" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

