[package]
name        = "thor-agent-web"
description = "Thor L7 WAF Web Agent — HTTP/HTTPS inspection and blocking"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thor-common = { path = "../thor-common" }
tokio       = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow      = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
sha2        = { workspace = true }
axum        = { workspace = true }
tower-http  = { workspace = true }
dashmap     = { workspace = true }

# Aho-Corasick for multi-pattern matching
ahocorasick = { workspace = true }

# mTLS for SOC communication
tokio-rustls   = { workspace = true }
rustls         = { workspace = true }
rustls-pemfile = { workspace = true }

# HTTP client for SOC event forwarding
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
