[package]
name = "thor-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "thor-agent"
path = "src/main.rs"

[lib]
name = "thor_agent"
path = "src/lib.rs"

[dependencies]
# ── Workspace shared ──────────────────────────────────────────────────────────
tokio             = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
serde_yaml        = { workspace = true }
chrono            = { workspace = true }
axum              = { workspace = true }
tower             = { workspace = true }
tower-http        = { workspace = true }
dashmap           = { workspace = true }
flume             = { workspace = true }
crossbeam         = { workspace = true }
parking_lot       = { workspace = true }
aya               = { workspace = true }
ipnetwork         = { workspace = true }
ahocorasick       = { workspace = true }
yara              = { workspace = true }
bloomfilter       = { workspace = true }
walkdir           = { workspace = true }
utoipa            = { workspace = true }
utoipa-swagger-ui = { workspace = true }
futures           = { workspace = true }
nix               = { workspace = true }
sha2              = { workspace = true }
rayon             = { workspace = true }
libc              = { workspace = true }

# ── ML / Inference ────────────────────────────────────────────────────────────
ort     = { version = "2.0.0-rc.4", features = ["load-dynamic", "download-binaries"] }
ndarray = { version = "0.15", features = ["rayon"] }

# ── Workspace crates ──────────────────────────────────────────────────────────
thor-common = { path = "../thor-common" }
thor-bpf    = { path = "../thor-bpf" }

# ── Agent-specific ────────────────────────────────────────────────────────────
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
hex               = "0.4"
regex             = "1.10"
uuid              = { version = "1.8", features = ["v4"] }
config            = { version = "0.14", features = ["yaml"] }
clap              = { version = "4.5", features = ["derive", "env"] }
tls-parser        = "0.11"
jsonwebtoken      = "9.3"
sled              = "0.34"
sysinfo           = "0.30"
tonic             = { version = "0.11", features = ["tls", "transport"] }
tokio-rustls      = "0.25"
rustls            = { version = "0.22", features = ["ring"] }
reqwest           = { version = "0.12", features = ["json", "rustls-tls", "gzip", "deflate"] }
aya-log           = "0.2"
bytes             = "1.5"
num_cpus          = "1.16"

# ── NEW: Phase 1 additions ────────────────────────────────────────────────────
blake3            = "1.5"
hostname          = "0.4"
tracing-appender  = "0.2"
mimalloc          = { version = "0.1", default-features = false }

# ── NEW: Phase 2 (Axis 2) additions ──────────────────────────────────────────
# Lazy statics for compiled regex (HTTP dissector)
once_cell         = "1.19"

# ── NEW: Phase 3 (Axis 3 — DFIR) additions ───────────────────────────────────
# Base64 encoding for evidence package transport over REST
base64            = "0.22"

[build-dependencies]
# Nothing extra

[profile.release]
inherits = "release"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile  = "3.10"

[[bench]]
name    = "sigma_engine"
harness = false
