[package]
name = "thor-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "thor-agent"
path = "src/main.rs"

[lib]
name = "thor_agent"
path = "src/lib.rs"

[dependencies]
# ── Workspace shared ──────────────────────────────────────────────────────────
tokio             = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
# FIXED: serde_yaml (archived) → serde_yml (active fork, same API)
serde_yml         = { workspace = true }
chrono            = { workspace = true }
axum              = { workspace = true }
tower             = { workspace = true }
tower-http        = { workspace = true }
dashmap           = { workspace = true }
flume             = { workspace = true }
crossbeam         = { workspace = true }
parking_lot       = { workspace = true }
aya               = { workspace = true }
ipnetwork         = { workspace = true }
ahocorasick       = { workspace = true }
yara              = { workspace = true }
bloomfilter       = { workspace = true }
walkdir           = { workspace = true }
utoipa            = { workspace = true }
utoipa-swagger-ui = { workspace = true }
futures           = { workspace = true }
nix               = { workspace = true }
sha2              = { workspace = true }
rayon             = { workspace = true }
libc              = { workspace = true }

# ── ML / Inference ────────────────────────────────────────────────────────────
# FIXED: was ort 2.0.0-rc.4 (unstable RC) → now uses workspace-pinned 1.16 stable
ort               = { workspace = true }
ndarray           = { version = "0.15", features = ["rayon"] }

# ── Workspace crates ──────────────────────────────────────────────────────────
thor-common = { path = "../thor-common" }
thor-bpf    = { path = "../thor-bpf" }

# ── Agent-specific ────────────────────────────────────────────────────────────
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
hex               = "0.4"
regex             = "1.10"
uuid              = { version = "1.8", features = ["v4"] }
config            = { version = "0.14", features = ["yaml"] }
clap              = { version = "4.5", features = ["derive", "env"] }
tls-parser        = "0.11"
jsonwebtoken      = "9.3"
# FIXED: sled 0.34 (archived, unmaintained) → redb 2.0 (active, 3x faster)
# Migration: sled::Db → redb::Database; Trees → Tables with typed keys
redb              = "2.0"
sysinfo           = "0.30"
tonic             = { version = "0.11", features = ["tls", "transport"] }
tokio-rustls      = "0.25"
rustls            = { version = "0.22", features = ["ring"] }
reqwest           = { version = "0.12", features = ["json", "rustls-tls", "gzip", "deflate"] }
aya-log           = "0.2"
bytes             = "1.5"
num_cpus          = "1.16"
rand              = "0.8"

# ── Security: Password Hashing ────────────────────────────────────────────────
# ADDED: Argon2id for password hashing (api/handlers.rs verify_admin_password)
argon2            = "0.5"

# ── NEW: Phase 5 DB Persistence additions (sqlx) ────────────────────────────
sqlx              = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate", "uuid", "chrono", "json"] }

# ── NEW: Phase 1 additions ────────────────────────────────────────────────────
blake3            = "1.5"
hostname          = "0.4"
tracing-appender  = "0.2"
mimalloc          = { version = "0.1", default-features = false }

# ── NEW: Phase 2 (Axis 2) additions ──────────────────────────────────────────
once_cell         = "1.19"

# ── NEW: Phase 3 (Axis 3 — DFIR) additions ───────────────────────────────────
base64            = "0.22"

# ── NEW: Optimization Phase additions ────────────────────────────────────────
flate2            = { version = "1.0", features = ["zlib"] }

[build-dependencies]
# Nothing extra

[profile.release]
inherits = "release"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile  = "3.10"

[[bench]]
name    = "sigma_engine"
harness = false

[[bench]]
name    = "detection_engines"
harness = false
