[package]
name = "thor-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# POD types only — no_std compatible
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[lib]
name = "thor_common"
