[package]
name = "thor-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rustls = { version = "0.22", features = ["ring"] }
tonic = { version = "0.11", features = ["tls", "transport"] }
