[package]
name        = "thor-common"
description = "Thor Firewall Smart — shared types, event schema, and mTLS utilities"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }

# mTLS / Zero-Trust (Phase 0 — CISO requirement)
rcgen          = { workspace = true }
rustls         = { workspace = true }
tokio-rustls   = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots   = { workspace = true }

# Hashing (for event dedup fingerprinting)
sha2   = { workspace = true }
blake3 = { workspace = true }
